--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,6 +12,8 @@ body {
 body {
 	width: 100vw;
 	background-color: var(--main-bg-color);
+	font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI Variable Display', 'Segoe UI', Helvetica,
+		'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
 	color: var(--main-text-color);
 	line-height: 1.5;
 	overflow-x: hidden;
