--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,14 +1,30 @@
-@mixin flex-row {
-	display: flex;
-	flex-direction: row;
+@mixin flex-center {
+	@include flex(center, center);
+}
+
+@mixin flex-align-center {
+	@include flex(flex-start, center);
 }
 
 @mixin flex-column {
+	@include flex(flex-start, flex-start, column);
+}
+
+@mixin flex($justify: flex-start, $align: stretch, $direction: row) {
 	display: flex;
-	flex-direction: column;
+	align-items: $align;
+	justify-content: $justify;
+	flex-direction: $direction;
 }
 
 @mixin empty-button {
 	background: none;
 	border: none;
+}
+
+@mixin truncate {
+	white-space: nowrap;
+	min-width: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
