Working on the desktop navigation

--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -13,19 +13,22 @@
 .navigation {
 	z-index: 3;
 	position: fixed;
-	top: 0px;
+	top: 0;
 	right: 100%;
+	height: 100vh;
 	@include mixins.flex(flex-start, stretch, column);
 	row-gap: 1rem;
-	width: 320px;
-	height: 100vh;
 	background-color: variables.$black-32;
 	box-shadow: rgba(0, 0, 0, 0.2) 0px 14px 28px -6px, rgba(0, 0, 0, 0.12) 0px 2px 4px -1px,
 		rgba(255, 255, 255, 0.094) 0px 0px 0px 1px;
-	transition: transform 200ms;
+	border-radius: 1rem;
+	transition: all 200ms;
 
 	&[data-css-is-open='true'] {
 		box-shadow: none;
+	}
+
+	@media all and (min-width: variables.$breakpoint-laptop) {
 	}
 }
 
