--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -21,3 +21,8 @@ $faded-white-600: rgba(255, 255, 255, 0.282);
 $faded-white-800: rgba(255, 255, 255, 0.055);
 
 // rgb(32, 32, 32)
+
+// breakpoints
+$breakpoint-tablet: 768px;
+$breakpoint-laptop: 1024px;
+$breakpoint-desktop: 1280px;
