--- a/src/components/navigation/components/header/header.module.scss
+++ b/src/components/navigation/components/header/header.module.scss
@@ -8,6 +8,7 @@
 	width: 100%;
 	padding: 0.75rem 1rem;
 	box-shadow: rgba(15, 15, 15, 0.2) 0px 1px 0px, transparent 0px 0px 0px;
+	border-radius: 1rem;
 	background: variables.$black-32;
 	transition: box-shadow 300ms;
 }
