--- a/src/components/pageHeader/styles.module.scss
+++ b/src/components/pageHeader/styles.module.scss
@@ -1,5 +1,5 @@
-@use '../../../../styles/mixins';
-@use '../../../../styles/variables';
+@use '../../styles/mixins';
+@use '../../styles/variables';
 
 .header {
 	@include mixins.flex(space-between, center);
