--- a/src/components/pageHeader/styles.module.scss
+++ b/src/components/pageHeader/styles.module.scss
@@ -22,3 +22,14 @@
 	color: variables.$faded-white;
 	cursor: pointer;
 }
+
+.button {
+	@include mixins.flex(center, center);
+	@include mixins.empty-button;
+	padding: 0.25rem;
+
+	svg {
+		width: 20px;
+		fill: variables.$faded-white;
+	}
+}
