Add the content editable component

--- a/src/app/[id]/@page/components/pageClient/styles.module.scss
+++ b/src/app/[id]/@page/components/pageClient/styles.module.scss
@@ -1,3 +1,12 @@
 .viewContainer {
 	flex-grow: 1;
 }
+
+.mainContent {
+	display: grid;
+	grid-template-columns: 10vw 1fr 10vw;
+}
+
+.contentHeader {
+	grid-column: 2 / 3;
+}
