--- a/src/components/navigation/components/pageGroup/styles.module.scss
+++ b/src/components/navigation/components/pageGroup/styles.module.scss
@@ -1,12 +1,7 @@
-@use '../../../../styles/mixins';
 @use '../../../../styles/variables';
-@use '../../mixins' as navigation-mixins;
 
 .pageLink {
-	display: block;
-	width: 100%;
 	transition: all 200ms ease-in;
-	@include navigation-mixins.navigation-element;
 
 	&[data-css-is-active='true'] {
 		background: variables.$faded-white-800;
@@ -14,39 +9,34 @@
 	}
 }
 
-.pageLinkContent {
-	@include mixins.flex(flex-start, center);
-	column-gap: 0.5rem;
-}
+.pageLinkContent {}
 
-@mixin button {
-	@include navigation-mixins.action-button;
-	@include mixins.flex(center, center);
-	width: 25px;
-	height: 25px;
+%button {
+	width: 1.5rem;
+	height: 1.5rem;
 
 	svg {
-		fill: variables.$faded-white-600;
+		fill: variables.$faded-white-400;
 	}
 }
 
 .expandBtn {
-	@include button;
+	@extend %button;
 
 	&[aria-expanded='true'] svg {
 		transform: rotateZ(0deg);
 	}
 
 	svg {
-		width: 16px;
-		height: 16px;
+		width: 1rem;
+		height: 1rem;
 		transition: transform 200ms ease-out;
 		transform: rotateZ(-90deg);
 	}
 }
 
 .pageBtn {
-	@include button;
+	@extend %button;
 
 	svg {
 		width: 22px;
@@ -54,36 +44,23 @@
 	}
 }
 
-.pageNameWrapper {
-	@include mixins.flex(flex-start, center);
-	flex-grow: 1;
-	@include mixins.truncate;
-}
+.pageNameWrapper {}
 
 .pageName {
-	@include mixins.truncate;
 	color: variables.$gray;
 	font-weight: 500;
 }
 
-.pageActions {
-	@include mixins.flex(flex-start, center);
-	flex-shrink: 0;
-	column-gap: 0.5rem;
-}
+.pageActions {}
 
 .addNewPageInExistingBtn {
-	@include button;
-
-	svg {
-		@include navigation-mixins.plus-svg;
-	}
+	@extend %button;
 }
 
 .moreBtn {
-	@include button;
+	@extend %button;
 
 	svg {
-		width: 24px;
+		width: 1.5rem;
 	}
 }
