--- a/src/components/appWrapper/styles.module.scss
+++ b/src/components/appWrapper/styles.module.scss
@@ -1,6 +1,3 @@
-@use '../../styles/mixins';
 @use '../../styles/variables';
 
-.container {
-	@include mixins.flex(flex-start, stretch, row);
-}
+.container {}
