--- a/src/components/iconManager/styles.module.scss
+++ b/src/components/iconManager/styles.module.scss
@@ -1,8 +1,3 @@
-@use '../../styles/mixins';
 @use '../../styles/variables';
 
-.button {
-	@include mixins.empty-button;
-	padding: 0.25rem;
-	transition: 200ms;
-}
+.button {}
