--- a/src/components/navigation/components/header/header.module.scss
+++ b/src/components/navigation/components/header/header.module.scss
@@ -1,50 +1,31 @@
-@use '../../../../styles/mixins';
 @use '../../../../styles/variables';
 
 .container {
 	z-index: 1;
-	@include mixins.flex(flex-start, center);
-	column-gap: 0.5rem;
-	width: 100%;
-	padding: 0.75rem 0.5rem;
-	box-shadow: rgba(15, 15, 15, 0.2) 0px 1px 0px, transparent 0px 0px 0px;
 	border-radius: 1rem;
+	box-shadow: variables.$faded-black-200 0px 1px 0px, transparent 0px 0px 0px;
 	background: variables.$black-32;
 	transition: box-shadow 300ms;
 }
 
 .userInitial {
-	@include mixins.flex(center, center);
-	flex-grow: 0;
-	width: 21px;
-	height: 21px;
-	padding: 0.5rem;
-	border-radius: 0.25em;
-	background: rgba(255, 255, 255, 0.094);
-	color: variables.$faded-white-200;
-	text-transform: uppercase;
+	width: 1.25rem;
+	height: 1.25rem;
 	font-weight: 500;
+	text-transform: uppercase;
+	color: variables.$faded-white-200;
+	background: variables.$faded-white-700;
 }
 
 .userNameBtn {
-	@include mixins.flex(flex-start, center);
-	flex: 1 1 auto;
-	column-gap: 0.5rem;
-	@include mixins.empty-button;
-	@include mixins.truncate;
-	text-align: left;
-	font-weight: 500;
-	color: variables.$faded-white;
 	font-size: 1rem;
-
-	.userName {
-		@include mixins.truncate;
-	}
+	font-weight: 500;
+	text-align: left;
+	color: variables.$faded-white;
 
 	svg {
-		flex-shrink: 0;
-		width: 14px;
-		height: 14px;
+		width: 1rem;
+		height: 1rem;
 		fill: variables.$faded-white-200;
 	}
 
