--- a/src/components/navigation/desktopNavigation/components/buttons/styles.module.scss
+++ b/src/components/navigation/desktopNavigation/components/buttons/styles.module.scss
@@ -1,9 +1,6 @@
 @use '../../../../../styles/variables.scss';
-@use '../../../mixins';
 
 .closeNavigationBtn {
-	@include mixins.action-button;
-
 	&:hover svg {
 		fill: variables.$faded-white;
 	}
@@ -13,20 +10,18 @@
 	}
 
 	svg {
-		width: 22px;
-		height: 22px;
+		width: 1.375rem;
+		height: 1.375rem;
 	}
 }
 
 .createPageBtn {
-	@include mixins.action-button;
-
 	svg {
 		fill: variables.$faded-white;
 	}
 
 	svg {
-		width: 22px;
-		height: 22px;
+		width: 1.375rem;
+		height: 1.375rem;
 	}
 }
