--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,86 +1,67 @@
+@use './utils/utils';
+
 html {
 	color-scheme: dark light;
 	scroll-behavior: smooth;
-}
-
-html,
-body {
-	min-height: 100vh;
 	font-size: 100%;
 }
 
 body {
-	width: 100vw;
-	background-color: var(--main-bg-color);
+	min-height: 100vh;
 	font-family: ui-sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI Variable Display', 'Segoe UI', Helvetica,
 		'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-font-smoothing: antialiased;
 	color: var(--main-text-color);
 	line-height: 1.5;
-	overflow-x: hidden;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	background-color: var(--main-bg-color);
 }
 
 @supports (min-height: 100dvh) {
 	body {
-		height: 100dvh;
+		min-height: 100dvh;
 	}
 }
 
-*,
-*::before,
-*::after {
+*, *::before, *::after {
 	box-sizing: border-box;
-	padding: 0;
+}
+
+* {
 	margin: 0;
+	padding: 0;
+	font: inherit;
 }
 
 a {
 	text-decoration: none;
 }
 
-img,
-picture,
-video,
-canvas,
-svg {
+img, picture, video, canvas, svg {
 	display: block;
 	max-width: 100%;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 }
 
-p,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+p, h1, h2, h3, h4, h5, h6 {
 	overflow-wrap: break-word;
 	text-wrap: balance;
 }
 
-ul,
-ol {
+ul, ol {
 	list-style: none;
 }
 
-button {
+button, a {
 	cursor: pointer;
 }
 
 @media (prefers-reduced-motion: reduce) {
-	*,
-	*::before,
-	*::after {
+
+	*, *::before, *::after {
 		animation-duration: 0.01ms;
 		animation-iteration-count: 1;
 		transition-duration: 0.01ms;
