--- a/src/app/[id]/@page/components/pageTitle/styles.module.scss
+++ b/src/app/[id]/@page/components/pageTitle/styles.module.scss
@@ -1,9 +1,16 @@
 .h1 {
-	font-size: 3rem;
-
+	min-height: 2.6rem;
 	padding: 0.5rem;
+	font-size: 2.6rem;
+	font-weight: bold;
+	cursor: text;
 
 	&:focus {
 		outline: none;
+	}
+
+	&[contenteditable][data-css-is-empty='true']:empty:after {
+		content: attr(data-placeholder);
+		-webkit-text-fill-color: rgb(52 52 52);
 	}
 }
