--- a/src/app/[id]/@page/components/pageTitle/styles.module.scss
+++ b/src/app/[id]/@page/components/pageTitle/styles.module.scss
@@ -9,7 +9,7 @@
 		outline: none;
 	}
 
-	&[contenteditable][data-css-is-empty='true']:empty:after {
+	&[contenteditable][data-css-is-empty='true']:after {
 		content: attr(data-placeholder);
 		-webkit-text-fill-color: rgb(52 52 52);
 	}
