--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,7 @@
 @use './utils/utils';
 
 html {
-	color-scheme: dark light;
+	// color-scheme: dark light;
 	scroll-behavior: smooth;
 	font-size: 100%;
 }
