--- a/src/components/navigation/mobileNavigation/styles.module.scss
+++ b/src/components/navigation/mobileNavigation/styles.module.scss
@@ -1,7 +1,5 @@
-@use '../../../styles/variables.scss';
-
 .newPageBtn {
-	color: variables.$gray;
+	color: var(--color-gray);
 
 	span {
 		text-align: left;
