--- a/src/styles/utils/_navigation_utils.scss
+++ b/src/styles/utils/_navigation_utils.scss
@@ -1,12 +1,12 @@
-@use '../../styles/variables';
+@use '../../styles/breakpoints';
 
 .navigation {
 	z-index: 3;
 	border-top-right-radius: 0.75rem;
 	border-bottom-right-radius: 0.75rem;
-	background-color: variables.$black-32;
-	box-shadow: variables.$faded-black-200 0px 14px 28px -6px, variables.$faded-black-100 0px 2px 4px -1px,
-		variables.$faded-white-700 0px 0px 0px 1px;
+	background-color: var(--black-800);
+	box-shadow: var(--faded-black-800) 0px 14px 28px -6px, var(--color-black) 0px 2px 4px -1px,
+		var(--faded-white-850) 0px 0px 0px 1px;
 	transition: all 350ms;
 	visibility: hidden;
 
@@ -24,7 +24,7 @@
 	font-size: 1rem;
 	cursor: pointer;
 
-	@media all and (min-width: variables.$breakpoint-tablet) {
+	@media all and (min-width: breakpoints.$tablet) {
 		padding: 0.25rem 0.25rem;
 		min-height: 30px;
 		font-size: 0.9rem;
@@ -34,5 +34,5 @@
 .plus-svg {
 	width: 1.125rem;
 	height: 1.125rem;
-	fill: variables.$faded-white-400;
+	fill: var(--faded-white-400);
 }
