--- a/src/components/home/navigation/expandMenu/styles.module.scss
+++ b/src/components/home/navigation/expandMenu/styles.module.scss
@@ -1,12 +1,11 @@
-@use '../../../../styles/variables.scss';
-
 .expandMenu {
   z-index: 90;
   position: fixed;
+  // top right bottom left
+  // top left/right bottom
   inset: 64px 0 0;
   height: calc(100vh - 64px);
-  background-color: var(--main-bg-color);
-  will-change: transform;
+  background-color: var(--color-page);
 
   @supports (max-height: 100dvh) {
     height: calc(100dvh - 64px);
@@ -14,33 +13,34 @@
 }
 
 .list {
-  font-size: 1.375rem;
+  font-size: var(--font-size-400);
 
   a, button {
     width: 100%;
-    color: var(--color-text);
-    font-weight: 600;
+    color: var(--color-text-primary);
+    font-weight: var(--font-weight-semibold);
   }
 }
 
 .bottomLinks {
-  border-top: 1px solid rgb(215, 215, 215);
+  border-top: 1px solid var(--color-border);
   padding-top: 1rem;
 }
 
 .downloadLink, .loginLink {
   display: block;
+  min-height: 2.125rem;
   text-align: center;
   width: 100%;
 }
 
 .downloadLink {
-  background-color: variables.$primary-blue;
-  color: variables.$white;
+  background-color: var(--color-blue-500);
+  color: var(--color-white);
 }
 
 .loginLink {
-  color: var(--color-text);
-  border: 1px solid variables.$faded-black-100;
-  box-shadow: 0 1px 2px #0001, 0 2px 4px #0002, 0 4px 8px #0003;
+  color: var(--color-text-primary);
+  border: 1px solid var(--color-border);
+  box-shadow: var(--shadow-bottom);
 }
