--- a/src/components/home/navigation/styles.module.scss
+++ b/src/components/home/navigation/styles.module.scss
@@ -1,13 +1,11 @@
 .navigationWrapper {
-  z-index: 100;
+  z-index: var(--z-index-mobile-nav);
+  inset: 0;
   position: sticky;
-  top: 0;
   transition: transform 350ms ease;
 
   &[data-css-is-open='true'] {
-    z-index: 100;
     position: fixed;
-    inset: 0;
     max-height: 100vh;
 
     @supports (max-height: 100dvh) {
@@ -26,10 +24,10 @@
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
-  background-color: var(--main-bg-color);
+  background-color: var(--color-page);
 }
 
 .rightContainer {
   grid-column: 3;
-  align-self: end;
+  justify-self: end;
 }
