--- a/src/components/navigation/components/header/header.module.scss
+++ b/src/components/navigation/components/header/header.module.scss
@@ -1,10 +1,10 @@
-@use '../../../../styles/variables';
+@use '../../../../styles/breakpoints';
 
 .container {
 	z-index: 1;
 	border-radius: 1rem;
-	box-shadow: variables.$faded-black-200 0px 1px 0px, transparent 0px 0px 0px;
-	background: variables.$black-32;
+	box-shadow: var(--faded-black-800) 0px 1px 0px, transparent 0px 0px 0px;
+	background: var(--black-800);
 	transition: box-shadow 300ms;
 }
 
@@ -13,23 +13,23 @@
 	height: 1.25rem;
 	font-weight: 500;
 	text-transform: uppercase;
-	color: variables.$faded-white-200;
-	background: variables.$faded-white-700;
+	color: var(--faded-white-200);
+	background: var(--faded-white-850);
 }
 
 .userNameBtn {
 	font-size: 1rem;
 	font-weight: 500;
 	text-align: left;
-	color: variables.$faded-white;
+	color: var(--faded-white-100);
 
 	svg {
 		width: 1rem;
 		height: 1rem;
-		fill: variables.$faded-white-200;
+		fill: var(--faded-white-200);
 	}
 
-	@media all and (min-width: variables.$breakpoint-tablet) {
+	@media all and (min-width: breakpoints.$tablet) {
 		font-size: 0.9rem;
 	}
 }
