--- a/src/components/navigation/components/homeLink/styles.module.scss
+++ b/src/components/navigation/components/homeLink/styles.module.scss
@@ -1,16 +1,16 @@
-@use '../../../../styles/variables';
+@use '../../../../styles/breakpoints';
 
 .link {
 	font-weight: 500;
-	color: variables.$gray;
+	color: var(--color-gray);
 
 	&[data-css-is-active='true'] {
-		background: variables.$faded-white-800;
-		color: variables.$faded-white;
+		background: var(--faded-white-900);
+		color: var(--faded-white-100);
 		font-weight: bold;
 	}
 
-	@media all and (min-width: variables.$breakpoint-tablet) {
+	@media all and (min-width: breakpoints.$tablet) {
 		padding-left: 0.5rem;
 	}
 }
