--- a/src/styles/utils/_utils.scss
+++ b/src/styles/utils/_utils.scss
@@ -1,6 +1,3 @@
-@use '../variables.scss';
-
-
 // default flex values
 //  flex-direction: row;
 //  flex-wrap: nowrap;
@@ -109,7 +106,8 @@
 }
 
 .bg-hover:hover {
-  background-color: variables.$faded-white-800;
+  // improve it
+  background-color: var(--faded-white-900);
 }
 
 .bg-transition {
@@ -174,19 +172,29 @@
 }
 
 .fill-black {
-  fill: variables.$black;
+  // improve it
+  fill: var(--black-800);
 }
 
-.bold {
-  font-weight: bold;
+.font-400 {
+  font-weight: 400;
 }
 
 .font-500 {
   font-weight: 500;
 }
 
+.font-600 {
+  font-weight: 600;
+}
+
+.font-700 {
+  font-weight: 700;
+}
+
 .text-white {
-  color: variables.$white;
+  // improve it
+  color: var(--white-800);
 }
 
 // 0.5rem = 8px
