--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,20 +9,6 @@
 	--font-weight-semibold: 600;
 	--font-weight-bold: 700;
 
-	--font-size-50: 0.75rem; // 12px
-	--font-size-100: 0.875rem; // 14px
-	--font-size-150: 0.9375rem; // 15px
-	--font-size-200: 1rem; // 16px
-	--font-size-300: 1.125rem; // 18px
-	--font-size-350: 1.25rem; // 20px
-	--font-size-400: 1.375rem; // 22px
-	--font-size-500: 1.625rem; // 26px
-	--font-size-600: 2rem; // 32px
-	--font-size-700: 2.625rem; // 42px
-	--font-size-800: 3.375rem; // 54px
-	--font-size-900: 4rem; // 64px
-	--font-size-1000: 4.75rem; // 76px
-
 	--font-family-sans: NotionInter, Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, "Apple Color Emoji", Arial, sans-serif, "Segoe UI Emoji", "Segoe UI Symbol";
 	--font-family-serif: "Lyon Text", Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "Hiragino Mincho Pro", "Songti TC", "Songti SC", SimSun, "Nanum Myeongjo", NanumMyeongjo, Batang, serif;
 	--font-family-serif-japanese: "Lyon Text", Georgia, YuMincho, "Yu Mincho", "Hiragino Mincho ProN", serif;
@@ -38,22 +24,23 @@
 	--shadow-300: 0px 36px 89px #0000000a, 0px 23.3333px 52.1227px #00000008, 0px 13.8667px 28.3481px rgba(0, 0, 0, .024), 0px 7.2px 14.4625px #00000005, 0px 2.93333px 7.25185px rgba(0, 0, 0, .016), 0px 0.666667px 3.50231px #00000003;
 	--shadow-filter: 0 4px 18px #0000004d;
 
-	--spacing-4: 0.25rem;
-	--spacing-8: 0.5rem;
-	--spacing-12: 0.75rem;
-	--spacing-16: 1rem;
-	--spacing-20: 1.25rem;
-	--spacing-24: 1.5rem;
-	--spacing-28: 1.75rem;
-	--spacing-32: 2rem;
-	--spacing-40: 2.5rem;
-	--spacing-48: 3rem;
-	--spacing-56: 3.5rem;
-	--spacing-64: 4rem;
-	--spacing-80: 5rem;
-	--spacing-96: 6rem;
-	--spacing-128: 8rem;
-	--spacing-160: 10rem;
+	--font-size-50: 0.75rem; // 12px
+	--font-size-100: 0.875rem; // 14px
+	--font-size-150: 0.9375rem; // 15px
+	--font-size-200: 1rem; // 16px
+	--font-size-300: 1.125rem; // 18px
+	--font-size-350: 1.25rem; // 20px
+	--font-size-400: 1.375rem; // 22px
+	--font-size-500: 1.625rem; // 26px
+	--font-size-600: 2rem; // 32px
+	--font-size-700: 2.625rem; // 42px
+	--font-size-800: 3.375rem; // 54px
+	--font-size-900: 4rem; // 64px
+	--font-size-1000: 4.75rem; // 76px
+
+
+	--border-radius-sm: 0.25rem;
+	--border-radius-regular: 0.5rem;
 }
 
 html {
@@ -68,7 +55,7 @@ body {
 	font-family: var(--font-family-sans);
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-font-smoothing: antialiased;
-	color: var(--color-text--primary);
+	color: var(--color-text-primary);
 	line-height: 1.5;
 	background-color: var(--color-page);
 }
