--- a/src/app/(home)/components/navigation/utils.scss
+++ b/src/app/(home)/components/navigation/utils.scss
@@ -5,7 +5,7 @@
   color: var(--color-text-primary);
   font-size: var(--font-size-100);
   font-weight: var(--font-weight-medium);
-  letter-spacing: var(--letter-spacing);
+  letter-spacing: var(--letter-spacing-100);
   transition: background-color .15s ease;
 
   &:hover {
