--- a/src/app/(home)/components/hero/styles.module.scss
+++ b/src/app/(home)/components/hero/styles.module.scss
@@ -23,10 +23,10 @@
 
 .section {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   gap: var(--homepage-hero-gap);
-  max-width: 100%;
   padding: var(--hero-padding);
 
   @media screen and (min-width: breakpoints.$laptop) and (min-height: 720px) {
@@ -41,10 +41,15 @@
 }
 
 .h1 {
+  text-align: center;
   font: var(--font-weight-semibold) var(--font-size-700) / var(--line-height-700) var(--font-family-sans);
 
   @media (min-width: breakpoints.$tablet) {
     font: var(--font-weight-semibold) var(--font-size-800) / var(--line-height-800) var(--font-family-sans);
+  }
+
+  @media (min-width: breakpoints.$laptop) {
+    text-align: left;
   }
 
   @media (min-width: breakpoints.$desktop) {
@@ -69,16 +74,14 @@
 }
 
 .header {
-  max-width: 100%;
+  align-items: center;
 
   @media (min-width: breakpoints.$tablet) {
-    align-items: center;
     min-width: 450px;
     max-width: 700px;
   }
 
   @media (min-width: breakpoints.$laptop) {
-    max-width: none;
     align-items: flex-start;
   }
 }
@@ -87,7 +90,6 @@
   --hero-media-max-width: 100%;
   --image-top-offset: 0;
   order: -1;
-  width: 100%;
   max-width: var(--hero-media-max-width);
   margin-top: var(--image-top-offset);
 
@@ -95,12 +97,9 @@
     --hero-media-max-width: 75%;
   }
 
-  @media (min-width: 840px) {
-    --hero-media-max-width: 50%;
-  }
-
-  @media (min-width: breakpoints.$desktop) {
+  @media (min-width: breakpoints.$laptop) {
     --image-top-offset: -64px;
+    --hero-media-max-width: 100%;
     order: 0;
   }
 }
@@ -123,9 +122,4 @@
 .nav {
   width: max-content;
   max-width: 100%;
-  margin: 0 auto;
-
-  @media (min-width: breakpoints.$laptop) {
-    margin: 0;
-  }
 }
