--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -38,16 +38,20 @@
 	--font-size-900: 4rem; // 64px
 	--font-size-1000: 4.75rem; // 76px
 
+	--letter-spacing-50: 0.0078125rem;
 	--letter-spacing-100: 0.0078125rem;
-
 	--letter-spacing-200: 0;
 	--letter-spacing-400: -0.015625rem;
+	--letter-spacing-500: -0.0390625rem;
 	--letter-spacing-700: -0.09375rem;
 	--letter-spacing-800: -0.1171875rem;
 	--letter-spacing-900: -0.1328125rem;
 
+	--line-height-50: 1rem;
+	--line-height-100: 1.25rem;
 	--line-height-200: 1.5rem;
 	--line-height-400: 1.75rem;
+	--line-height-500: 2rem;
 	--line-height-700: 3rem;
 	--line-height-800: 3.5rem;
 	--line-height-900: 4rem;
