--- a/src/app/(home)/components/navigation/styles.module.scss
+++ b/src/app/(home)/components/navigation/styles.module.scss
@@ -24,10 +24,14 @@
   z-index: 100;
   position: relative;
   display: grid;
-  grid-template-columns: 1fr auto 1fr;
+  grid-template-columns: auto 1fr;
   align-items: center;
   padding: 1rem;
   background-color: var(--color-page);
+
+  @media (min-width: breakpoints.$desktop) {
+    grid-template-columns: 1fr auto 1fr;
+  }
 }
 
 .rightContainer {
