--- a/src/app/(home)/components/features/styles.module.scss
+++ b/src/app/(home)/components/features/styles.module.scss
@@ -44,6 +44,16 @@
   padding: 1.5rem;
 }
 
+.header {
+  @media (min-width: breakpoints.$laptop) {
+    &[data-css-is-wide='true'] {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
+  }
+}
+
 .nameWrapper {
   margin-bottom: 0.25rem;
 
@@ -75,9 +85,12 @@
   display: flex;
   align-items: center;
 
-  &[data-css-is-wide='true'] {
-    flex-direction: column;
-    align-items: flex-start;
+  @media (min-width: breakpoints.$laptop) {
+    &[data-css-is-wide='true'] {
+      flex-grow: 1;
+      flex-direction: column;
+      align-items: flex-start;
+    }
   }
 }
 
@@ -95,6 +108,14 @@
   margin-left: auto;
   align-self: flex-end;
   width: 32px;
+
+  @media (min-width: breakpoints.$laptop) {
+    &[data-css-is-wide='true'] {
+      align-self: auto;
+      margin-top: auto;
+      margin-left: 0;
+    }
+  }
 }
 
 .arrowWrapper {
@@ -110,6 +131,12 @@
 .picture {
   display: flex;
   padding: 0 2px 2px;
+
+  @media (min-width: breakpoints.$laptop) {
+    &[data-css-is-wide='true'] {
+      max-width: 60%;
+    }
+  }
 }
 
 .img {
@@ -132,5 +159,11 @@
     max-height: 400px;
     object-fit: cover;
     object-position: top left;
+  }
+
+  @media (min-width: breakpoints.$laptop) {
+    &[data-css-is-wide='true'] {
+      margin-top: 1rem;
+    }
   }
 }
